tests/format/misc/errors/invalid-typescript-decorators/jsfmt.spec.js
run_spec(import.meta, ["typescript", "babel-ts"]);
